# cookie-py

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
src/: dummy.py
tests/: conftest.py  test_checks.py  test_git.py  test_pyenv.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  package-list.json  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: format.yml  lint.yml  test.yml
{{cookiecutter.repo_name}}/src/: dummy.py
{{cookiecutter.repo_name}}/tests/: test_dummy.py
